[package]
name = "pew"
description = "A benchmarking library for Rust based on google/benchmark"
version = "0.2.1"
authors = ["Akshay Nanavati <akshay.nanavati1@gmail.com>"]
repository = "https://github.com/akshaynanavati/pew"
readme = "README.md"
keywords = ["benchmark"]
license = "Apache-2.0"

[dependencies]
clap = "2"
lazy_static = "1.0"

[dev-dependencies]
rand = "0.4.0"
